增加验证指纹的弹窗提示

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,4 +10,8 @@
         android:layout_height="50dp"
         android:text="开启指纹验证开关"
         android:gravity="center"/>
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
 </LinearLayout>
